--- a/webroot/css/AdminLTE.css
+++ b/webroot/css/AdminLTE.css
@@ -19,6 +19,8 @@ body {
   height: 100%;
 }
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
   overflow-x: hidden;
@@ -636,12 +638,10 @@ a:focus {
     background-color: inherit;
   }
   .sidebar-mini.sidebar-collapse .sidebar-menu > li:hover > a > .pull-right-container {
-    position: relative!important;
     float: right;
     width: auto!important;
-    left: 180px !important;
-    top: -22px !important;
-    z-index: 900;
+    left: 200px!important;
+    top: 10px!important;
   }
   .sidebar-mini.sidebar-collapse .sidebar-menu > li:hover > a > .pull-right-container > .label:not(:first-of-type) {
     display: none;
@@ -1776,9 +1776,6 @@ a:focus {
 .box-header > .box-tools.pull-right .dropdown-menu {
   right: 0;
   left: auto;
-}
-.box-header > .box-tools .dropdown-menu > li > a {
-  color: #444!important;
 }
 .btn-box-tool {
   padding: 5px;
